Added backend functions.
