# design/user.go
@@ -8,25 +8,15 @@ import (
 var _ = Resource("user", func() {
 	BasePath("/users")
 
-	Action("show", func() {
-		Routing(GET(""))
-		Description("Get all users")
-
-		Response(OK, Any)
-		Response(NotFound, String)
-		Response(BadRequest, String)
-		Response(Unauthorized, String)
-		Response(InternalServerError, String)
-	})
-
-	Action("create", func() {
+	Action("register", func() {
 		Routing(POST(""))
-		Description("Create new user")
+		Description("Register new user")
 
 		Payload(func() {
-			Attribute("name", String, "name of the user")
+			Attribute("name", String, "username")
+			Attribute("password", String, "password of the user")
 			Attribute("country", String, "country of the user")
-			Required("name", "country")
+			Required("name", "password", "country")
 
 		})
 
@@ -37,9 +27,14 @@ var _ = Resource("user", func() {
 		Response(InternalServerError, String)
 	})
 
-	Action("get", func() {
+	Action("login", func() {
 		Routing(GET("/:userName"))
-		Description("Get user details by name")
+		Description("Login user details by name")
+
+		Params(func() {
+			Attribute("password", String, "password of the user")
+			Required("password")
+		})
 
 		Response(OK, Any)
 		Response(NotFound, String)
@@ -50,7 +45,7 @@ var _ = Resource("user", func() {
 
 	Action("remove", func() {
 		Description("remove user")
-		Routing(DELETE("/:userID"))
+		Routing(DELETE("/:userName"))
 
 		Response(OK, Any)
 		Response(NotFound, String)
