# swagger/swagger.yaml
@@ -1,50 +1,57 @@
 consumes:
 - application/json
 definitions:
-  CreateTopicPayload:
+  PostTopicPayload:
     example:
-      content: Non non tempora id consequatur dolor.
-      userID: Esse explicabo perspiciatis quo laudantium.
+      content: 4njw3zeoyp
+      userName: Laudantium quaerat nihil voluptates dolorem.
     properties:
       content:
         description: Content of the topic
-        example: Non non tempora id consequatur dolor.
+        example: 4njw3zeoyp
+        maxLength: 255
         type: string
-      userID:
-        description: Creator of this topic
-        example: Esse explicabo perspiciatis quo laudantium.
+      userName:
+        description: Author of this topic
+        example: Laudantium quaerat nihil voluptates dolorem.
         type: string
     required:
     - content
-    - userID
-    title: CreateTopicPayload
+    - userName
+    title: PostTopicPayload
     type: object
-  CreateUserPayload:
+  RegisterUserPayload:
     example:
-      country: Qui iste et.
-      name: Ut qui et quia recusandae voluptatem.
+      country: Recusandae voluptatem.
+      name: Porro ipsum voluptatem aut.
+      password: Veniam accusamus quasi placeat quasi.
     properties:
       country:
         description: country of the user
-        example: Qui iste et.
+        example: Recusandae voluptatem.
         type: string
       name:
-        description: name of the user
-        example: Ut qui et quia recusandae voluptatem.
+        description: username
+        example: Porro ipsum voluptatem aut.
+        type: string
+      password:
+        description: password of the user
+        example: Veniam accusamus quasi placeat quasi.
         type: string
     required:
     - name
+    - password
     - country
-    title: CreateUserPayload
+    title: RegisterUserPayload
     type: object
   VoteTopicPayload:
     example:
-      userID: Nihil voluptates dolorem.
+      userName: Officiis qui iste et eveniet ut qui.
       vote: down
     properties:
-      userID:
-        description: user id
-        example: Nihil voluptates dolorem.
+      userName:
+        description: username
+        example: Officiis qui iste et eveniet ut qui.
         type: string
       vote:
         description: upvote/downvote topic
@@ -54,7 +61,7 @@ definitions:
         example: down
         type: string
     required:
-    - userID
+    - userName
     - vote
     title: VoteTopicPayload
     type: object
@@ -124,7 +131,7 @@ paths:
       summary: Download public/
   /api/v1/topics:
     get:
-      description: Get top topics
+      description: Show top topics
       operationId: topic#show
       produces:
       - text/plain
@@ -146,14 +153,14 @@ paths:
       tags:
       - topic
     post:
-      description: Create new topic
-      operationId: topic#create
+      description: Post new topic
+      operationId: topic#post
       parameters:
       - in: body
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/CreateTopicPayload'
+          $ref: '#/definitions/PostTopicPayload'
       produces:
       - text/plain
       responses:
@@ -170,37 +177,10 @@ paths:
       schemes:
       - http
       - https
-      summary: create topic
+      summary: post topic
       tags:
       - topic
   /api/v1/topics/{topicID}:
-    delete:
-      description: remove the topic
-      operationId: topic#delete
-      parameters:
-      - in: path
-        name: topicID
-        required: true
-        type: string
-      produces:
-      - text/plain
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      schemes:
-      - http
-      - https
-      summary: delete topic
-      tags:
-      - topic
     patch:
       description: upvote/downvote cluster
       operationId: topic#vote
@@ -234,37 +214,15 @@ paths:
       tags:
       - topic
   /api/v1/users:
-    get:
-      description: Get all users
-      operationId: user#show
-      produces:
-      - text/plain
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      schemes:
-      - http
-      - https
-      summary: show user
-      tags:
-      - user
     post:
-      description: Create new user
-      operationId: user#create
+      description: Register new user
+      operationId: user#register
       parameters:
       - in: body
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/CreateUserPayload'
+          $ref: '#/definitions/RegisterUserPayload'
       produces:
       - text/plain
       responses:
@@ -281,41 +239,13 @@ paths:
       schemes:
       - http
       - https
-      summary: create user
-      tags:
-      - user
-  /api/v1/users/{userID}:
-    delete:
-      description: remove user
-      operationId: user#remove
-      parameters:
-      - in: path
-        name: userID
-        required: true
-        type: string
-      produces:
-      - text/plain
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      schemes:
-      - http
-      - https
-      summary: remove user
+      summary: register user
       tags:
       - user
   /api/v1/users/{userName}:
-    get:
-      description: Get user details by name
-      operationId: user#get
+    delete:
+      description: remove user
+      operationId: user#remove
       parameters:
       - in: path
         name: userName
@@ -337,7 +267,39 @@ paths:
       schemes:
       - http
       - https
-      summary: get user
+      summary: remove user
+      tags:
+      - user
+    get:
+      description: Login user details by name
+      operationId: user#login
+      parameters:
+      - description: password of the user
+        in: query
+        name: password
+        required: true
+        type: string
+      - in: path
+        name: userName
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      schemes:
+      - http
+      - https
+      summary: login user
       tags:
       - user
   /swagger.json:
